[package]
authors = ["Leonardo Escuer <leoescuer@protonmail.com>"]
edition = "2018"
name = "workers"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

num = "0.3"
rust_decimal = "1.8"
serde = {version = "1.0", features = ["derive"]}
tinyvec = "1.0.1"
wasm-bindgen = {version = "0.2", features = ["serde-serialize"]}

[profile.release]
lto = true
opt-level = 'z'
